MPLUG-91: fix build issue